--- a/dutylist/static/css/main.css
+++ b/dutylist/static/css/main.css
@@ -14,6 +14,7 @@ body{
   background-color: #343434;
   display: flex;
   flex-direction: column;
+  height: 100vh;
 }
 
 #app{
@@ -89,7 +90,7 @@ a{
 .card{
   background-color: #34343437;
   margin: auto;
-  width: 50%;
+  width: 100vw;
   
   border-left: 6px solid #3EC8AC;
   border-right: 6px solid #4E90A4;
@@ -107,6 +108,7 @@ a{
   background-image: -o-linear-gradient(left, rgba(254, 172, 94, 0.5) 0%,rgba(199, 121, 208, 0.5) 50%,  rgba(75, 192, 200, 0.5) 100%), -o-linear-gradient(left, rgba(254, 172, 94, 0.5) 0%,rgba(199, 121, 208, 0.5) 50%,  rgba(75, 192, 200, 0.5) 100%);
   background-image: linear-gradient(to right,rgba(254, 172, 94, 0.5) 0%,rgba(199, 121, 208, 0.5) 50%,  rgba(75, 192, 200, 0.5) 100%), linear-gradient(to right,rgba(254, 172, 94, 0.5) 0%,rgba(199, 121, 208, 0.5) 50%,  rgba(75, 192, 200, 0.5) 100%);
 }
+
 
 .card-header{
   /*background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));*/
@@ -171,3 +173,4 @@ a{
 .table{
   text-align: center;
 }
+
